--- a/flask/playground/templates/index.html
+++ b/flask/playground/templates/index.html
@@ -6,8 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>You Made It To The Park!</title>
     <style>
+        .body{
+            justify-content: center;
+            display: flex;
+            width: 100%vf;   
+            height: 100%vh;  
+            margin: 10px;
+            padding: 5px;
+        }
         .welcome{
             text-align: center;
+        }
+        .Container{
+            width: 1206px;   
+            height: 1206px; 
+        }
+        .divContainer{
+            display: flex;
+            justify-content: center;
+            margin: 10px;
+            padding: 5px;
+            flex-wrap: wrap;
+        }
+        
+        .box{
+            margin: 10px;
+            border-radius: 8px;
+            background-color: lightblue;
+            box-shadow: black 3px 3px 3px;
+            width: 350px;
+            height: 350px;
         }
     </style>
 </head>
@@ -16,7 +44,13 @@
 
 <h1 class="welcome">Welcome</h1>
 
-
+<h1 class="welcome">You are now in the Playground</h1>
+    <div class="Container">
+        <div class="divContainer">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+    </div>
 
 </body>
 </html>
