--- a/flask_mysql/first_Flask_MYSQL/templates/index.html
+++ b/flask_mysql/first_Flask_MYSQL/templates/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>these are friends</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>first name</th>
+                <tr>last name</tr>
+                <tr>occupation</tr>
+            </tr>
+        </thead>
+    </table>
 </body>
 </html>
