early snacks snacks

--- a/flask_mysql/first_Flask_MYSQL/templates/index.html
+++ b/flask_mysql/first_Flask_MYSQL/templates/index.html
@@ -7,14 +7,32 @@
     <title>first flask</title>
 </head>
 <body>
+    <form action="/create_friend" method="post">
+        <label for="fname">First Name:</label>
+        <input type="text" name="fname">
+        <label for="lname">Last Name:</label>
+        <input type="text" name="lname">
+        <label for="occ" >Occupation:</label>
+        <input type="text" name="occ">
+        <input type="submit" value="Add Friend">
+    </form>
     <h1>these are friends</h1>
     <table>
         <thead>
             <tr>
-                <th>first name</th>
-                <tr>last name</tr>
-                <tr>occupation</tr>
+                <tr> firstname </tr>
+                <tr> lastname </tr>
+                <tr> occupation </tr>
             </tr>
+            <tbody>
+                {% for one_friend in friends %}
+                <tr>
+                    <td>{{ one_friend.first_name }}</td>
+                    <td>{{ one_friend.last_name }}</td> 
+                    <td>{{ one_friend.occupation }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </thead>
     </table>
 </body>
