--- a/flask/counter/templates/counter.html
+++ b/flask/counter/templates/counter.html
@@ -24,11 +24,16 @@
     <div class="wrap">
         <div class="counter">
             <h1>Counter</h1>
-            <h3> some number </h3>
-            <button id="x2">add 2 visits!</button>
-            <button id="reset">Reset</button>
+            <h3>visits {{session['count']}} </h3>
+            <form action="/x2" method="POST">
+            <button  name="add_2_visits">
+                add 2 visits!</button>
+            </form>
+            <form action="/reset" method="POST">
+            <button name="reset_button"> Reset</button>
+            </form>
+            <!-- <a href="/index.html"></a> -->
         </div>
     </div>
-    
 </body>
 </html>
