--- a/flask/dojoSurvey/templates/index.html
+++ b/flask/dojoSurvey/templates/index.html
@@ -5,28 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dojo Survey</title>
+    <link rel="stylesheet" type= "text/css" href="{{ url_for('static', filename='css/my_style.css') }}">
     <style>
-        *{
-    padding: 0px;
-    margin: 0px;
-    vertical-align: top;
-    box-sizing: border-box;
-}
-
-body{
-    display: flex;
-}
-.div{
-    box-shadow: black 3px 3px 3px;
-    border-radius: 5px;
-    background-color: peachpuff;
-    justify-content: space-around;
-    padding: 5px;
-    gap: 20px;
-}
-.shadow{
-    box-shadow: black 2px  2px 2px;
-}
+        
     </style>
 </head>
 <body>
