--- a/flask_mysql/usersCR2/templates/index.html
+++ b/flask_mysql/usersCR2/templates/index.html
@@ -10,29 +10,29 @@
 <body>
     <h1>All Users</h1>
 <div class="form">
-    <form action="/create_user", method="POST">
+    <form action="/user/new/form", method="POST">
         <table>
             <tr>
                 <th>ID</th>
                 <th>Full Name</th>
                 <th>Email</th>
                 <th>Created At</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
             {% for one_user in all_users %}
             <tr>
                 <td>{{ one_user.id }}</td>
                 <td>{{ one_user.first_name }}, {{ one_user.last_name }}</td> 
                 <td>{{ one_user.email }}</td>
-                <td>{{one_user.createdAt}}</td>
+                <td>{{one_user.created_at}}</td>
                 <td>
-                    <a href="/delete_user/{{one_user.id}}"> delete </a>
                     <a href="/edit/{{one_user.id}}"> Edit </a>
+                    <a href="/delete_user/{{one_user.id}}"> delete </a>
                 </td>
             </tr>
             {% endfor %}
         </table>
-        <td><a href="/newUser"> Add a New User</a></td>
+        <td><a href="/user/new/form"> Add a New User</a></td>
     </form>
 </div>
     
