--- a/flask_mysql/usersCR2/templates/newUser.html
+++ b/flask_mysql/usersCR2/templates/newUser.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <h1>Add a New User</h1>
-    <span><a class="homeButton" href="/">HOME</a></span>
     <!-- this is the form -->
-    <form action="/create_user" method="post">
+    <form action="/user/create" method="post">
         <label for="first_name">First Name:</label><br>
         <input type="text" name="first_name"><br>
         <label for="last_name">Last Name:</label><br>
@@ -20,5 +19,6 @@
         <input type="text" name="email"><br>
         <input type="submit" value="Create"><br>
     </form> 
+    <span><a class="homeButton" href="/">HOME</a></span>
 </body>
 </html>
