--- a/flask_mysql/car-dealz3/flask_app/templates/registration_login.html
+++ b/flask_mysql/car-dealz3/flask_app/templates/registration_login.html
@@ -23,7 +23,7 @@
     </div>
     <!-- this is the register form -->
     <div class="div">
-        <form action="/register/user", method="POST">
+        <form action="/create/user", method="POST">
             <h2>Register</h2>
             <!-- name -->
             <label for="first_name">First Name</label><br>
@@ -36,10 +36,10 @@
             <input type="text" name="email"><br>
             <!-- password -->
             <label for="password">password</label><br>
-            <input type="text" name="pw"><br>
+            <input type="text" name="password"><br>
             <!-- confirm password -->
-            <label for="pw_confirm">confirm password</label><br>
-            <input type="text" name="pw_confirm"><br>
+            <label for="password_confirm">confirm password</label><br>
+            <input type="text" name="password_confirm"><br>
             <!-- register button -->
             <button class="button">Register</button>
         </form>
@@ -50,8 +50,8 @@
             <h2>Login</h2>
             <label for="email">Email</label><br>
             <input type="text" name="email"><br>
-            <label for="pw">Password</label><br>
-            <input type="text" name="pw"><br>
+            <label for="password">Password</label><br>
+            <input type="text" name="password"><br>
             <button class="button">Login</button>
         </form>
     </div>
