--- a/flask_mysql/login_and_registration/flask_app/static/css/my_style.css
+++ b/flask_mysql/login_and_registration/flask_app/static/css/my_style.css
@@ -20,7 +20,7 @@
             padding: 20px;
             border: black 5px;
             background-color: grey;
-            color: rgb(249, 249, 44);
+            color: peachpuff;
         }
         .buttons{
             padding: 3px;
